# pot

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  build.sh  index.html  install.sh  pot.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codacy.yml
demo/: test.c  test@0.0.1
src/: build.rs  main.rs
