[package]
name = "pot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
colored = "2.0"
clap = "2.33"  # @dependabot ignore
libc = "0.2"

[package.metadata.deb]
name = "pot"
version = "0.0.2-alpha"
maintainer = "Kevin Alavik <kevin@alavik.se>"
architecture = "amd64"
